app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *

 */


// ff9129    Orange 
// 66c4c7    Blue 

@import "bootstrap-sprockets";
@import "bootstrap";
/*@import 'nprogress-bootstrap ';*/



html {
  min-height: 100%;
}

body {
  font-family: 'PT sans', 'Lucida Grande', 'Helvetica Neue', sans-serif;
  height:100vh;
  background-color:#ffffff ; 
  // background-image: url("http://i.imgur.com/tW01Tq4.jpg"); 
  background-repeat: true;
  .container {
    background-color: rgba(56, 56, 56, 1);
    min-height: 500px;
    width: 96%;
    color: white;
    box-shadow: 2px 2px 1px #161616;
    padding: 12% 4% 4% 4%;
  }
}

body.splashground {
  background-image: url("http://i376.photobucket.com/albums/oo204/Piper_Gragg/Dollarphotoclub_67009433_zpskpmaxj95.jpg");
  background-position-y: 36%;
  background-repeat: no-repeat;
  overflow:hidden; 
}

.container.splashground.text-center {
  background-color: transparent;
  min-height: 500px;
  width: 96%;
  color: white;
  box-shadow: none;
  padding: 12% 4% 4% 4%;
}

.container.white {
  background-color: rgba(255, 255, 255, 0.92);
  min-height: 100vh;
  width: 28%;
  color: rgb(29, 29, 29);
  box-shadow: 2px 2px 1px #161616;
  padding: 10% 4% 4% 4%;
  font-weight: 800;
  position: absolute;
  right: 0;
  top: 9.7%;
}

h1 {
  font-style: bold;
  font-weight: 800;
}

h2.sign {
  font-size: 25px;
  margin: 0 0 19% 0;
}

ul {
  margin: 0 auto;
  width: 50%;
}
li a {
  color: white;
  font-style: bold;
  letter-spacing: 0.4px;
  font-weight: 800;
}

form {
  margin-bottom: 5.4%;
}

.hero-div {
  margin: 7vh 0 0 0px;
  width: 100%;
  height: 100%;
  padding: 0 10vw 0 0;
}

h1.hero-text, h3.hero-text{
  font-style: bold;
  color: white;
  font-weight: 800;
  position: relative;
  z-index:1;
  line-height: 120%;
}

h1.hero-text {
  font-size: 664%;
}

.vl {
  border-right: 2px solid rgba(255, 255, 255, 0.529412);
  height: 40px;
  position: relative;
  float: right;
  margin: 0 2%;
}

.signups {
  margin: 0% 3.4% 0 0;
  padding: 2% 0 0 0;
}



// .filter {
//   z-index:1; 
//   background-color: rgba(0, 0, 0, 0.6);
//   height: 100%;
//   width:100%;
// }

input {
  color:black;
}

.buy_button {
  /* margin: 100px; */
  /* padding: 10%; */
  position: fixed;
  top: 15%;
  right: 2%;
  }

.hero_image {
  background-color: white;
  width: 4.5%;
  height: 50;
  margin: 0.1% 0 0 2%;
  position: absolute;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.29);
}

.hero_image.not-signed-in {
  background-color: white;
  width: 15vh;
  height: 50;
  margin: -0.14% 0 0 -2%;
  position: absolute; 
  // absolute positioning doesn't break the row. 
}

.mimo_logo {
  height: 100%;
  width: 100%;
}



p.fixed_name {
  position: fixed;
  bottom: 0;
  background-color: rgba(0, 155, 168, 0.44);
  padding: 2% 0 0 1%;
  font-weight: 400;
  letter-spacing: 1px;
  font-size: 14px;
  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.49);
  text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.28);
}


.big_note {
  height: 10%;
  width: 22%;
}
.small_note {
  height: 10%;
  width: 12%;
}

.float-right {
  float: right;
}


.checkbox {
  position: relative;
  display: inline; 
  margin-top: 10px;
  margin-bottom: 10px;
}

.nav-tabs {
  background-color: #66c4c7;
  border-bottom: 1px solid rgba(0,0,0,0.05);
  width: 100vw;
  height: 4.8vw;
  position: fixed;
  z-index: 999;
  margin: 0 auto;
  border: transparent;
}

.row.nav {
  padding: 0.5% 0 0 0;
}

li.float-right {
  position: relative;
  float: right;
  margin: 1% 0;
}

// li.float-right.left {
//   right: 15%;
// }

// li.float-right.right {
//   right: 5%;
// }

.nav-tabs > li > a {
  line-height: 142%;
  border: 1px solid transparent;
  font-family: 'PT sans', 'Lucida Grande', 'Helvetica Neue', sans-serif;
  font-size: 100%;
  font-weight: 500;
  letter-spacing: 1px;
  color: #FFFFFF;
  text-shadow: 0px 3px 1px #646464;
}

.nav-tabs > li > a:hover {
  background-color: transparent;
  text-shadow: none;
  box-shadow: 0px 0px 0px white;
  border: transparent;
  
}

.card > .btn {
  bottom: 20px;
  left: 175px;
  position: absolute;
}

.card {
  height: 200px;
  background-color: white;
  width: 300px;
  margin: 20px 0 0 86px;
  border-bottom: 1px solid grey;
  color:grey;
  border-radius:3px;
}

.card.xs-card.white {
  height: 90px;
  width: 90px;
  margin: 5% 0 5% 40%;
}

.sm-card {
  height:190px; 
  width: 190px;
}

.lg-card {
  height: 400px;
  background-color: white;
  width: 350px;
  margin: 20px 0 0 86px;
  border-bottom: 1px solid grey;
  color:#111;
  border-radius:3px;
}
.chosen {
  color:grey; 
}

.unchosen {
  color:black; 
}
.float-right {
  float:right; 
}

.float-left {
  float:left; 
}

a:hover {
  box-shadow: none; 
  border:none; 
}
a.over-image {
  position: absolute;
  bottom: 41%;
}

a.over-image.left {
  right: 63.5%;
}

a.over-image.right {
  /* right: 29%; */
  margin: 0 auto 0 5%;
  display: block;
}

a p {
  color: white;
  text-decoration: none;
  /* text-overflow: ellipsis; */
  font-style: normal;
  font-family:'PT sans', 'Lucida Grande', 'Helvetica Neue', sans-serif;
  font-size:14px; 
  letter-spacing: 1px;
}

table {
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
  font-size:14px; 
}


ul.nav.nav-tabs.text-center.not-signed-in {
  padding: 1% 0 0 3%;
  height: 18.2vh;
}

.alert {
  border: 1px solid transparent;
  border-radius: 0px;
  position: fixed;
  text-align: center;
  background-color: #ff9129;
  color: white;
  width: 100%;
  bottom: 0;
  z-index:999;
  letter-spacing: 1px;
  text-shadow: 1px 0px 0px grey; 
  box-shadow: 3px 3px 2px rgba(6, 6, 6, 0.8);
}


.title_row {
  margin: 0 0 5% 0;
}

.btn.spaced {
  margin: 8% 0 20% 0;
}

.row.text-center.spacer-text {
  margin: 5% 0 2% 0;
  padding: 1% 0 0 0;
}

.text-center.solid-box {
  border: 3px solid rgba(255, 255, 255, 0.64);
  padding: 3% 0 8% 0px;
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.47);
  background-color: rgba(16, 15, 15, 0.35);
}

.btn {
  border-radius: 0px;
  /* border-bottom: 2.8px solid rgba(0, 0, 0, 0.17); */
  background-color: transparent;
  letter-spacing: 0.5px;
  background-color: #ff9129;
  font-weight: 800;
  box-shadow: 3px 3px 2px rgba(6, 6, 6, 0.3);
  color:white;
}

.btn.btn-deemphasized {
  background-color: transparent;
  border: 2px solid rgba(245, 245, 245, 0.42);
}

.btn-danger {
  background-color: rgb(121, 26, 4);
  border: transparent;
}

.btn:hover {
  box-shadow: 3px 4px 6px rgba(6, 6, 6, 0.55);
  text-shadow: 0px 2px 1px grey; 
  color:white;

}
.btn_bottom {
  margin: 0 0 50px 0;
}

.btn-admin {
  // color: #F0D97C;
  // background-color: #231388;
  // border-color: #1A1B1A;
  display: block;
  margin: 10px auto;
  width: 30%;
}

.center {
  margin: 5% 0 0 16%;
}



// Progress bar 

#nprogress {
  pointer-events: none;
}

#nprogress .bar {
  background: #29d;

  position: fixed;
  z-index: 1031;
  top: 0;
  left: 0;

  width: 100%;
  height: 10px;
}

/* Fancy blur effect */
#nprogress .peg {
  display: block;
  position: absolute;
  right: 0px;
  width: 100px;
  height: 100%;
  box-shadow: 0 0 20px #29d, 0 0 15px #29d;
  opacity: 1.0;

  -webkit-transform: rotate(3deg) translate(0px, -4px);
      -ms-transform: rotate(3deg) translate(0px, -4px);
          transform: rotate(3deg) translate(0px, -4px);
}

.nprogress-custom-parent {
  overflow: hidden;
  position: relative;
}

.nprogress-custom-parent #nprogress .spinner,
.nprogress-custom-parent #nprogress .bar {
  position: absolute;
}

.page_modal {
  width:10000px;
  height:10000px; 
  background-color: rgba(0,0,0,1);
  position:absolute; 
  left:0;
  top:0;
}



@import url(http://fonts.googleapis.com/css?family=PT+Sans);
@font-face {
  font-family: 'Glyphicons Halflings';
  src: url('/assets/glyphicons-halflings-regular.eot');
  src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

@media (max-width: 861px) {

    .hero-div, h1.hero-text, h3.hero-text, {
      display: hidden; 
      z-index:0; 
      position:absolute; 
      bottom:0;
      right:0;
      height:1px;
      width:1px; 
      overflow:hidden; 
      color: transparent; /* Force the image to its minimum width */
    }

    .container.white {
      width:100%;
      padding: 100px 92px 0 92px;
    }

}

